# MacroBridge

./: .gitignore  CMakeLists.txt  README.md
Common/UIBinding/: EventDelegate.h  IRuleSink.h  NotifyRule.h  RuleBuilder.cpp  RuleBuilder.h  UI Bingding System.md  UIBindingRules.cpp  UIBindingRules.h
Common/Utils/: path_utils.h  string_conv.h
MacroBridge/: CMakeLists.txt
app/: CMakeLists.txt
app/skin/: main.xml
app/src/: main.cpp
app/src/Manager/: AppManager.cpp  AppManager.h  PluginManager.cpp  PluginManager.h  ResourceManager.cpp  ResourceManager.h
app/src/UI/Main/Core/: UIPageBase.cpp  UIPageBase.h
app/src/UI/Main/Views/: MainWindowUI.cpp  MainWindowUI.h
app/src/UI/Main/Windows/: MainWindow.cpp  MainWindow.h
cmake/: PluginHelpers.cmake
plugins/: CMakeLists.txt
plugins/ahk/: AhkGenerator.cpp  AhkGenerator.h  AhkKeyMap.cpp  AhkKeyMap.h  AhkParser.cpp  AhkParser.h  AhkPlugin.cpp  AhkPlugin.h  CMakeLists.txt
plugins/logitech/: CMakeLists.txt  LogitechGenerator.cpp  LogitechGenerator.h  LogitechKeyMap.cpp  LogitechKeyMap.h  LogitechParser.cpp  LogitechParser.h  LogitechPlugin.cpp  LogitechPlugin.h
plugins/razer/: CMakeLists.txt  RazerFormat.h  RazerGenerator.cpp  RazerGenerator.h  RazerKeyMap.cpp  RazerKeyMap.h  RazerParser.cpp  RazerParser.h  RazerPlugin.cpp  RazerPlugin.h  RazerPlugin3.cpp  RazerPlugin3.h  RazerPlugin4.cpp  RazerPlugin4.h
plugins/xmouse/: CMakeLists.txt  XMouseGenerator.cpp  XMouseGenerator.h  XMouseParser.cpp  XMouseParser.h  XMousePlugin.cpp  XMousePlugin.h
shared/: AIR (2).h  AIR.h  PluginExportAlias.h
